# audio2txt

./: pyproject.toml
audio2txt/: __main__.py  main.py  template.env  tk_audio.py  tk_oss.py  ui.py
